--- a/package.json
+++ b/package.json
@@ -16,12 +16,21 @@
     "url": "https://github.com/Olegoriy/food/issues"
   },
   "homepage": "https://github.com/Olegoriy/food#readme",
+  "browserslist": [
+    "> 1%"
+  ],
   "devDependencies": {
+    "@babel/cli": "^7.26.4",
+    "@babel/core": "^7.26.9",
+    "@babel/preset-env": "^7.26.9",
+    "babel-loader": "^9.2.1",
+    "core-js": "^3.40.0",
     "json-server": "^1.0.0-beta.3",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "chalk": "^5.4.1",
     "chokidar": "^4.0.3",
     "colorette": "^2.0.20",
