--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dayjs": "^1.11.13",
     "dot-prop": "^9.0.0",
     "es-escape-html": "^0.1.1",
+    "es6-promise": "^4.2.8",
     "eta": "^3.5.0",
     "header-range-parser": "^1.1.3",
     "http-status-emojis": "^2.2.0",
