--- a/package.json
+++ b/package.json
@@ -43,12 +43,14 @@
     "http-status-emojis": "^2.2.0",
     "inflection": "^3.0.2",
     "ipaddr.js": "^2.2.0",
+    "jquery": "^3.7.1",
     "json5": "^2.2.3",
     "lowdb": "^7.0.1",
     "milliparsec": "^4.0.0",
     "mime": "^4.0.4",
     "mrmime": "^2.0.0",
     "negotiator": "^0.6.4",
+    "nodelist-foreach-polyfill": "^1.2.0",
     "readdirp": "^4.1.1",
     "regexparam": "^2.0.2",
     "sirv": "^2.0.4",
